Revision history for Perl extension FSA::Rules.

0.27
      - Corrected a number of typos in the POD.

0.26  2006-08-29T17:44:37
      - The message() method now takes a list of arguments instead of a single
        scalar. It will concatenate them all together.
      - Fixed bug in strict mode where the machine entered the next state
        before it evaluated all of the rules to ensure that there were not
        multiple destination states. Thanks to Khalil Haddad for sending
        a script that demonstrated the issue (Ticket # 21213).
      - Removed the word "possible" from the exception thrown in strict mode
        where multiple destinations have been found in the rules.

0.25  2006-07-14T18:49:53
      - Reverted "circular reference" change from previous release. It wasn't
        a circular reference after all.
      - Added a "description" attribute for rules.
      - Updated the graph output to output the description of each rule within
        the node, along with the node name.
      - Fixed the "obscure bug" with the 'wrap_nodes' parameter to the graph()
        method so that it no longer breaks graphs.
      - Changed graph tests to use as_canon() instead of as_text(), since
        the latter seems to vary with release of GraphViz.
      - Add the 'with_state_name' parameter to graph() to prepend the state
        name to the label for each node if there is a label. Otherwise the
        label is just the state name regardless of this parameters.
      - Changed the 'wrap_nodes' parameter to graph() to 'wrap_node_labels'.
        The former is still supported but will be removed in a future release.
      - Changed the 'wrap_labels' parameter to graph() to 'wrap_edge_labels'.
        The former is still supported but will be removed in a future release.
      - Changed the 'text_wrap' parameter to graph() to 'wrap_length'. The
        former is still supported but will be removed in a future release.